--- a/frontend.html
+++ b/frontend.html
@@ -94,7 +94,7 @@
 <p><span class="badge badge-light">Montreal</span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
-<h5><a href='https://up42gmbh.recruitee.com/o/frontend-engineer-mfx'>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://up42gmbh.recruitee.com/o/frontend-engineer-mfx'>
       Frontend Engineer (m/f/x) - UP42 GmbH
     </a></h5> 
 <p><span class="badge badge-light">Berlin, Germany</span></p>
@@ -104,11 +104,11 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/liveramp/jobs/1767629'>Job Application for Software Engineer - Frontend at LiveRamp</a></h5> 
+<h5><a href='https://boards.greenhouse.io/liveramp/jobs/1767629'>Job Application for Software Engineer - Frontend at LiveRamp</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/homex/d0a53035-9a2b-4364-abc8-c11e246d7cc8'>HomeX - Frontend Developer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/homex/d0a53035-9a2b-4364-abc8-c11e246d7cc8'>HomeX - Frontend Developer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
@@ -124,7 +124,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://futrli.workable.com/j/B1C40984E1'>Futrli - Jobs: Front End Engineer (Belfast) - Apply online</a></h5> 
+<h5><a href='https://futrli.workable.com/j/B1C40984E1'>Futrli - Jobs: Front End Engineer (Belfast) - Apply online</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
@@ -258,7 +258,7 @@ have?...</p>
 <p><span class="badge badge-light">Italy</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<h5><a href='https://docplanner.workable.com/j/C4A0A56403'>Docplanner / Doctoralia - Jobs: JR Front-end Developer - Apply online</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://docplanner.workable.com/j/C4A0A56403'>Docplanner / Doctoralia - Jobs: JR Front-end Developer - Apply online</a></h5> 
 <p><span class="badge badge-light">Italy</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
@@ -360,7 +360,7 @@ machine learning alongside financial engineering to continuously turn data into?
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/aircall/fecc6c85-97cb-40de-b184-be5922000ed7'>Aircall - Senior Software Engineer - Front-end - Communications Platform</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/aircall/fecc6c85-97cb-40de-b184-be5922000ed7'>Aircall - Senior Software Engineer - Front-end - Communications Platform</a></h5> 
 <p><span class="badge badge-light">Paris</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
@@ -443,7 +443,7 @@ generation web and mobile components and interfaces. Develop new ways of?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
-<h5><a href='https://caterwings.join.com/jobs/253685-frontend-developer-m-f'>Job @ CaterWings (Berlin): Frontend Developer (m/f) | JOIN</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://caterwings.join.com/jobs/253685-frontend-developer-m-f'>Job @ CaterWings (Berlin): Frontend Developer (m/f) | JOIN</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Jul 14, 2019 ... CaterWings has a job opening for Frontend Developer (m/f) in Berlin (published: 
 30.04.2019). Apply now or check the other available jobs.</p>
